added autentication with google and github

--- a/.env
+++ b/.env
@@ -7,3 +7,9 @@
 DATABASE_URL="mongodb+srv://miguelsuarezf05:vDkYga1Wbgmbug8C@cluster0.qxubhfi.mongodb.net/test"
 NEXTAUTH_JWT_SECRET="NEXT-JWT-SECRET"
 NEXTAUTH_SECRET="NEXT-SECRET"
+
+GITHUB_ID=792885c626821e7745d7
+GITHUB_SECRET=57b9bb6c5cc40612a2e633463b257bb607290a6e
+
+GOOGLE_CLIENT_ID=795914250218-cemn7vg1h1bpqmel5blmg15htjth11t5.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
